force-app/main/default/objects/Email_Services_Function__c/Email_Services_Function__c.object-meta.xml
<CustomObject>
    <description>Email services</description>
    <label>e2a Email Rule</label>
    <nameField>
        <label>Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>e2a Email Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>