force-app/main/default/objects/Email_Services_Function__c/fields/Action_if_No_Match_Found__c.field-meta.xml
<CustomField>
    <fullName>Action_if_No_Match_Found__c</fullName>
    <label>Action if No Match Found</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insert New Record</fullName>
                <default>true</default>
                <label>Insert New Record</label>
            </value>
            <value>
                <fullName>Put email in an Unmatched Email Queue</fullName>
            </value>
            <value>
                <fullName>Drop email</fullName>
            </value>
            <value>
                <fullName>Go to another e2a Email Service Rule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>