force-app/main/default/objects/Email_Services_Function__c/fields/Allow_Manual_Insert__c.field-meta.xml
<CustomField>
    <fullName>Allow_Manual_Insert__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Manual Insert</label>
    <type>Checkbox</type>
</CustomField>