force-app/main/default/objects/Email_Services_Function__c/fields/Allow_Manual_Match__c.field-meta.xml
<CustomField>
    <fullName>Allow_Manual_Match__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Manual Match</label>
    <type>Checkbox</type>
</CustomField>