force-app/main/default/objects/Email_Services_Function__c/fields/Alternate_Record_Matching_Group__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Record_Matching_Group__c</fullName>
    <description>Specify regular expression to extract a value from selected parts of email, Using Alternate Record Matching Group.</description>
    <label>Alternate Record Matching Group</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>