force-app/main/default/objects/Email_Services_Function__c/fields/Alternate_Record_Matching_Regex__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Record_Matching_Regex__c</fullName>
    <label>Alternate Record Matching Regex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>