force-app/main/default/objects/Email_Services_Function__c/fields/Alternate_Record_Matching_Search_In__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Record_Matching_Search_In__c</fullName>
    <label>Alternate Record Matching Search In</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Subject</fullName>
            </value>
            <value>
                <fullName>Header</fullName>
            </value>
            <value>
                <fullName>Body</fullName>
            </value>
            <value>
                <fullName>Subject &amp; Body</fullName>
            </value>
            <value>
                <fullName>Subject &amp; Body &amp; Header</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>