force-app/main/default/objects/Email_Services_Function__c/fields/Assigned_Owner__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related object assigned owner</description>
    <label>Assigned Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Email_Services_Functions_Assigned_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>