force-app/main/default/objects/Email_Services_Function__c/fields/Assigned_Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Owner_Type__c</fullName>
    <description>Assigned owner user type</description>
    <label>Assigned Owner Type</label>
    <length>5</length>
    <type>Text</type>
</CustomField>