force-app/main/default/objects/Email_Services_Function__c/fields/Assigned_Queue__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Queue__c</fullName>
    <description>Assigned queue</description>
    <label>Assigned Queue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>