force-app/main/default/objects/Email_Services_Function__c/fields/Attachments_On_Obj_Is_Set__c.field-meta.xml
<CustomField>
    <fullName>Attachments_On_Obj_Is_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attachments On Obj Is Set</label>
    <type>Checkbox</type>
</CustomField>