force-app/main/default/objects/Email_Services_Function__c/fields/Attachments_On_Target_Obj__c.field-meta.xml
<CustomField>
    <fullName>Attachments_On_Target_Obj__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attachments On Target Obj</label>
    <type>Checkbox</type>
</CustomField>