force-app/main/default/objects/Email_Services_Function__c/fields/Automatically_Copy_Tags__c.field-meta.xml
<CustomField>
    <fullName>Automatically_Copy_Tags__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Automatically Copy Tags</label>
    <type>Checkbox</type>
</CustomField>