force-app/main/default/objects/Email_Services_Function__c/fields/Body_Assign_Field__c.field-meta.xml
<CustomField>
    <fullName>Body_Assign_Field__c</fullName>
    <description>Email body assign field</description>
    <label>Email Body Assign Field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>