force-app/main/default/objects/Email_Services_Function__c/fields/Body_Contains_Argument_2__c.field-meta.xml
<CustomField>
    <fullName>Body_Contains_Argument_2__c</fullName>
    <description>Body contains argument</description>
    <label>Body Contains Argument</label>
    <length>80</length>
    <type>Text</type>
</CustomField>