force-app/main/default/objects/Email_Services_Function__c/fields/Body_Contains_Argument_2_Overwrite__c.field-meta.xml
<CustomField>
    <fullName>Body_Contains_Argument_2_Overwrite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Body Contains Argument 2 Overwrite</label>
    <type>Checkbox</type>
</CustomField>