force-app/main/default/objects/Email_Services_Function__c/fields/Body_Contains_Field_1__c.field-meta.xml
<CustomField>
    <fullName>Body_Contains_Field_1__c</fullName>
    <description>Email body contains field</description>
    <label>Body Contains Field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>