force-app/main/default/objects/Email_Services_Function__c/fields/Body_Contains_Field_Value_2__c.field-meta.xml
<CustomField>
    <fullName>Body_Contains_Field_Value_2__c</fullName>
    <description>Email body contains assigned value</description>
    <label>Body Contains Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>