force-app/main/default/objects/Email_Services_Function__c/fields/Contact_Match_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Match_Type__c</fullName>
    <description>Contact match type</description>
    <label>Contact Match Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Earliest Created</fullName>
            </value>
            <value>
                <fullName>Latest Created</fullName>
            </value>
            <value>
                <fullName>Latest Modified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>