force-app/main/default/objects/Email_Services_Function__c/fields/Email_Date_Add_Days__c.field-meta.xml
<CustomField>
    <fullName>Email_Date_Add_Days__c</fullName>
    <description>Email received date adjustment days</description>
    <label>Email Date Add Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>