force-app/main/default/objects/Email_Services_Function__c/fields/Email_Date_Assign_Field__c.field-meta.xml
<CustomField>
    <fullName>Email_Date_Assign_Field__c</fullName>
    <description>Email received date assign field</description>
    <label>Email Date Assign Field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>