force-app/main/default/objects/Email_Services_Function__c/fields/Email_From_Domain_Overwrite__c.field-meta.xml
<CustomField>
    <fullName>Email_From_Domain_Overwrite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email From Domain Overwrite</label>
    <type>Checkbox</type>
</CustomField>