force-app/main/default/objects/Email_Services_Function__c/fields/Email_Html_Body_Overwrite__c.field-meta.xml
<CustomField>
    <fullName>Email_Html_Body_Overwrite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Html Body Overwrite</label>
    <type>Checkbox</type>
</CustomField>