force-app/main/default/objects/Email_Services_Function__c/fields/Email_Message_Object_Key_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Email_Message_Object_Key_Prefix__c</fullName>
    <description>Related email message object key prefix</description>
    <label>Related Email Msg Obj Key Prefix</label>
    <length>3</length>
    <type>Text</type>
</CustomField>