force-app/main/default/objects/Email_Services_Function__c/fields/Email_To_Address_Overwrite__c.field-meta.xml
<CustomField>
    <fullName>Email_To_Address_Overwrite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email To-Address Overwrite</label>
    <type>Checkbox</type>
</CustomField>