force-app/main/default/objects/Email_Services_Function__c/fields/From_Address_Assign_Field__c.field-meta.xml
<CustomField>
    <fullName>From_Address_Assign_Field__c</fullName>
    <description>Email from-address assign field</description>
    <label>Email From-Address Assign Field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>