force-app/main/default/objects/Email_Services_Function__c/fields/From_Domain_Assign_Field__c.field-meta.xml
<CustomField>
    <fullName>From_Domain_Assign_Field__c</fullName>
    <description>Email from-address domain assign field</description>
    <label>Email From Domain Assign Field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>