force-app/main/default/objects/Email_Services_Function__c/fields/From_First_Name_Assign_Field__c.field-meta.xml
<CustomField>
    <fullName>From_First_Name_Assign_Field__c</fullName>
    <description>Email from first name assign field</description>
    <label>Email From First Name Assign Field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>