force-app/main/default/objects/Email_Services_Function__c/fields/Function_Id__c.field-meta.xml
<CustomField>
    <fullName>Function_Id__c</fullName>
    <description>Email services function id</description>
    <label>Function Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>