force-app/main/default/objects/Email_Services_Function__c/fields/Headers_Assign_Field__c.field-meta.xml
<CustomField>
    <fullName>Headers_Assign_Field__c</fullName>
    <label>Email Headers Assign Field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>