force-app/main/default/objects/Email_Services_Function__c/fields/Html_Body_Assign_field__c.field-meta.xml
<CustomField>
    <fullName>Html_Body_Assign_field__c</fullName>
    <label>Email Html Body Assign field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>