force-app/main/default/objects/Email_Services_Function__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Record is active</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>