force-app/main/default/objects/Email_Services_Function__c/fields/Matched_Account_Assign_Field__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Assign_Field__c</fullName>
    <description>Matched account assign field</description>
    <label>Matched Account Assign Field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>