force-app/main/default/objects/Email_Services_Function__c/fields/Matched_Contact_Assign_Field__c.field-meta.xml
<CustomField>
    <fullName>Matched_Contact_Assign_Field__c</fullName>
    <description>Matched contact assign field</description>
    <label>Matched Contact Assign Field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>