force-app/main/default/objects/Email_Services_Function__c/fields/Matched_Contact_Overwrite__c.field-meta.xml
<CustomField>
    <fullName>Matched_Contact_Overwrite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Matched Contact Overwrite</label>
    <type>Checkbox</type>
</CustomField>