force-app/main/default/objects/Email_Services_Function__c/fields/NewAlternate_Record_Matching_Search_In__c.field-meta.xml
<CustomField>
    <fullName>NewAlternate_Record_Matching_Search_In__c</fullName>
    <label>Alternate Record Matching Search In</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Subject</fullName>
            </value>
            <value>
                <fullName>Body</fullName>
            </value>
            <value>
                <fullName>Headers</fullName>
            </value>
            <value>
                <fullName>To</fullName>
            </value>
            <value>
                <fullName>From</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>