force-app/main/default/objects/Email_Services_Function__c/fields/Object_Key_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Object_Key_Prefix__c</fullName>
    <description>Related object key prefix</description>
    <label>Related Object Key Prefix</label>
    <length>3</length>
    <type>Text</type>
</CustomField>