force-app/main/default/objects/Email_Services_Function__c/fields/Object_Status_Field_3__c.field-meta.xml
<CustomField>
    <fullName>Object_Status_Field_3__c</fullName>
    <description>Related object status picklist field</description>
    <label>Related Object Status Field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>