force-app/main/default/objects/Email_Services_Function__c/fields/Object_Status_Field_3_Overwrite__c.field-meta.xml
<CustomField>
    <fullName>Object_Status_Field_3_Overwrite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Object Status Field 3 Overwrite</label>
    <type>Checkbox</type>
</CustomField>