force-app/main/default/objects/Email_Services_Function__c/fields/Object_Status_Field_Value_3__c.field-meta.xml
<CustomField>
    <fullName>Object_Status_Field_Value_3__c</fullName>
    <description>Related object status picklist field assigned value</description>
    <label>Related Object Status Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>