force-app/main/default/objects/Email_Services_Function__c/fields/Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Queue_Id__c</fullName>
    <description>Queue id for unmatched or errored messages</description>
    <label>Queue Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>