force-app/main/default/objects/Email_Services_Function__c/fields/Record_Insert__c.field-meta.xml
<CustomField>
    <fullName>Record_Insert__c</fullName>
    <description>Target object record insert status</description>
    <label>Record Insert</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Insert Not Allowed</fullName>
            </value>
            <value>
                <fullName>Insert Allowed</fullName>
            </value>
            <value>
                <fullName>Only Manual Insert Allowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>