force-app/main/default/objects/Email_Services_Function__c/fields/Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Id__c</fullName>
    <description>Related object record type Id (on insert)</description>
    <label>Record Type Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>