force-app/main/default/objects/Email_Services_Function__c/fields/Record_Type_Id_Overwrite__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Id_Overwrite__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Record Type Id Overwrite</label>
    <type>Checkbox</type>
</CustomField>