force-app/main/default/objects/Email_Services_Function__c/fields/Service_Id_Assign_Field__c.field-meta.xml
<CustomField>
    <fullName>Service_Id_Assign_Field__c</fullName>
    <description>Email service id assign field</description>
    <label>Service ID Assign Field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>