force-app/main/default/objects/Email_Services_Function__c/fields/Service_Id_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Id_Code__c</fullName>
    <description>Email service id code</description>
    <label>Service ID Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>