force-app/main/default/objects/Email_Services_Function__c/fields/Service_ID_Overwrite__c.field-meta.xml
<CustomField>
    <fullName>Service_ID_Overwrite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service ID Overwrite</label>
    <type>Checkbox</type>
</CustomField>