force-app/main/default/objects/Email_Services_Function__c/fields/Store_a_copy_of_email_as_an_Activity__c.field-meta.xml
<CustomField>
    <fullName>Store_a_copy_of_email_as_an_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store a copy of email as an Activity</label>
    <type>Checkbox</type>
</CustomField>