force-app/main/default/objects/Email_Services_Function__c/fields/Store_Attachments_In__c.field-meta.xml
<CustomField>
    <fullName>Store_Attachments_In__c</fullName>
    <inlineHelpText>Allow email&apos;s attachments to be stored in Attachment Object or Files.</inlineHelpText>
    <label>Store Attachments In</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attachment Object</fullName>
            </value>
            <value>
                <fullName>Files</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>