force-app/main/default/objects/Email_Services_Function__c/fields/Subject_Assign_Field__c.field-meta.xml
<CustomField>
    <fullName>Subject_Assign_Field__c</fullName>
    <description>Email subject assign field</description>
    <label>Email Subject Assign Field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>