force-app/main/default/objects/Email_Services_Function__c/fields/Subject_Contains_Argument_1_Overwrite__c.field-meta.xml
<CustomField>
    <fullName>Subject_Contains_Argument_1_Overwrite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subject Contains Argument 1 Overwrite</label>
    <type>Checkbox</type>
</CustomField>