force-app/main/default/objects/Email_Services_Function__c/fields/Subject_Contains_Argument_3__c.field-meta.xml
<CustomField>
    <fullName>Subject_Contains_Argument_3__c</fullName>
    <description>Subject contains argument</description>
    <label>Subject Contains Argument</label>
    <length>80</length>
    <type>Text</type>
</CustomField>