force-app/main/default/objects/Email_Services_Function__c/fields/Subject_Contains_Field_3__c.field-meta.xml
<CustomField>
    <fullName>Subject_Contains_Field_3__c</fullName>
    <description>Email subject contains field</description>
    <label>Subject Contains Field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>