force-app/main/default/objects/Email_Services_Function__c/fields/Subject_Contains_Field_Value_1__c.field-meta.xml
<CustomField>
    <fullName>Subject_Contains_Field_Value_1__c</fullName>
    <description>Email subject contains assigned value</description>
    <label>Subject Contains Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>