force-app/main/default/objects/Email_Services_Function__c/fields/Thread_Id_In_Subject__c.field-meta.xml
<CustomField>
    <fullName>Thread_Id_In_Subject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Thread Id In Subject</label>
    <type>Checkbox</type>
</CustomField>