force-app/main/default/objects/Email_Services_Function__c/fields/To_Address_Assign_Field__c.field-meta.xml
<CustomField>
    <fullName>To_Address_Assign_Field__c</fullName>
    <description>Email to-address assign field</description>
    <label>Email To-Address Assign Field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>